# tersecontext

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  go.work  pyproject.toml  usage.md
agents/: _shared_context.txt
agents/api-gateway/: PROMPT.md
agents/dual-retriever/: CLAUDE.md  PROMPT.md
agents/dynamic-analysis/: CLAUDE.md  PROMPT.md
agents/embedder/: CLAUDE.md  PROMPT.md
agents/foundation/: PROMPT.md
agents/graph-writer/: CLAUDE.md  PROMPT.md
agents/parser/: CLAUDE.md  PROMPT.md
agents/query-understander/: CLAUDE.md  PROMPT.md
agents/repo-watcher/: CLAUDE.md  PROMPT.md
agents/serializer/: CLAUDE.md  PROMPT.md
agents/subgraph-expander/: CLAUDE.md  PROMPT.md
agents/symbol-resolver/: CLAUDE.md  PROMPT.md
agents/vector-writer/: CLAUDE.md  PROMPT.md
contracts/events/: embedded_nodes.json  execution_path.json  file_changed.json  parsed_file.json  raw_trace.json
demo/: queries.txt
docker/: go.Dockerfile  neo4j-init.cypher  prometheus.yml  python.Dockerfile
docs/: architecture.md
proto/: ingest.proto  query.proto
scripts/: add-repo.sh  demo.sh  install-hook.sh  link-repos.sh  migrate_drop_node_search_index.py  push_go_job.py
services/embedder/: pyproject.toml  requirements.txt
services/embedder/app/: consumer.py  embedder.py  main.py  models.py  neo4j_client.py
services/embedder/app/providers/: base.py
services/embedder/tests/: conftest.py  test_consumer.py  test_embedder.py  test_main.py
services/parser/: pyproject.toml  requirements.txt
services/parser/app/: consumer.py  extractor.py  extractor_go.py  go_edges.py  go_nodes.py  go_stable_id.py  main.py  models.py  parser.py  py_edges.py  py_nodes.py  py_stable_id.py
services/parser/tests/: test_parser.py
services/parser/tests/fixtures/: sample.py
tests/: test_go_tracing_e2e.py
(+355 files in other folders)
