[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tersecontext"
version = "0.1.0"
description = "Minimum context. Maximum understanding."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["llm", "rag", "code-analysis", "context", "knowledge-graph"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.135.2",
]

[project.urls]
Homepage = "https://github.com/tersecontext/tersecontext"
Repository = "https://github.com/tersecontext/tersecontext"
