[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tersecontext-parser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
